[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumaapi"
version = "0.0.1"
authors = [
    {name = "Luma AI", email = "hello@lumalabs.ai"},
]
description = "Luma AI API wrapper library and CLI"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "fire",
    "platformdirs",
]

[tool.setuptools.packages.find]
include = ["lumaapi*", "scripts*"]


[project.scripts]
luma = "scripts.run_lumaapi:entrypoint"
