[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "lumaapi"
version = "0.0.4"
authors = [
    {name = "Luma AI", email = "hello@lumalabs.ai"},
]
description = "Luma AI API wrapper library and CLI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "fire",
    "enum-tools",
    "platformdirs",
]

[project.urls]
Homepage = "https://lumalabs.ai/luma-api"

[tool.setuptools.packages.find]
include = ["lumaapi*", "scripts*"]


[project.scripts]
luma = "scripts.run_lumaapi:entrypoint"
